--- a/web-app/package.json
+++ b/web-app/package.json
@@ -23,5 +23,8 @@
     "tailwindcss": "^3",
     "eslint": "^8",
     "eslint-config-next": "13.5.6"
+  },
+  "engines": {
+    "node": "16.*"
   }
 }
